--- a/MiningExpansion/GameData/MiningExpansion/Parts/Mk2ISRUDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Mk2ISRUDrill/Drill.cfg
@@ -70,6 +70,8 @@ tags = drill extractor harvest isru mine )mining (ore resource
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
 		ExperienceEffect = DrillSkill
 		EfficiencyBonus = 1
 		ThermalEfficiency 
@@ -99,14 +101,16 @@ tags = drill extractor harvest isru mine )mining (ore resource
 		TemperatureModifier
 		{
 			key = 0 10000
-			key = 250 5000
-			key = 500 1875
+			key = 250 7500
+			key = 500 3750
 			key = 750 500
 			key = 1000 0
 		}		
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
 		Specialty = DrillSkill
 		EfficiencyBonus = 1
 		ThermalEfficiency 
@@ -141,6 +145,6 @@ tags = drill extractor harvest isru mine )mining (ore resource
 		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
 		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
 		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
-		MaxCoolant = 75					//Maximum amount of radiator capacity we can consume - 50 = 1 small
+		MaxCoolant = 150					//Maximum amount of radiator capacity we can consume - 50 = 1 small
 	}
 }
