--- a/MiningExpansion/GameData/MiningExpansion/Parts/Mk2Refinery/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Mk2Refinery/ISRU.cfg
@@ -73,7 +73,9 @@ description = A smaller version of Kerbodyne's mobile processing plant, this mod
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		ExperienceEffect = ConverterSkill
 		EfficiencyBonus = 1
 
 		 
@@ -134,7 +136,9 @@ description = A smaller version of Kerbodyne's mobile processing plant, this mod
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		ExperienceEffect = ConverterSkill
 		EfficiencyBonus = 1
 
 		 
@@ -187,7 +191,9 @@ description = A smaller version of Kerbodyne's mobile processing plant, this mod
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		ExperienceEffect = ConverterSkill
 		EfficiencyBonus = 1
 
 		 
@@ -242,7 +248,9 @@ description = A smaller version of Kerbodyne's mobile processing plant, this mod
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		ExperienceEffect = ConverterSkill
 		EfficiencyBonus = 1
 
 		 
