--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size0ISRU/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size0ISRU/ISRU.cfg
@@ -71,7 +71,9 @@ MODEL
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		ExperienceEffect = ConverterSkill
 		EfficiencyBonus = 1
 
 		 
@@ -127,7 +129,9 @@ MODEL
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		ExperienceEffect = ConverterSkill
 		EfficiencyBonus = 1
 
 		 
@@ -190,7 +194,9 @@ MODEL
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		ExperienceEffect = ConverterSkill
 		EfficiencyBonus = 1
 
 		 
@@ -246,7 +252,9 @@ MODEL
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		ExperienceEffect = ConverterSkill
 		EfficiencyBonus = 1
 
 		 
