--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1Generator/Generator.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1Generator/Generator.cfg
@@ -26,7 +26,7 @@ category = Electrical
 subcategory = 0
 title = Fuel Cell Generator
 manufacturer = Coreworks Extractions Consortium
-description = Need electricity but don't have the space to radially attach Fuel Cells?   The Fuel Cell generator offers the same easy power generation that Fuel Cells offer, but in a convenient 1.25m meter housing.  Like the smaller fuel cells, this generator operates by converting fuel and oxidizer into energy.
+description = Need electricity but don't have the space to radially attach Fuel Cells?   The Fuel Cell generator offers the same easy power generation that Fuel Cells offer, but in a convenient 1.25 meter housing.  Like the smaller fuel cells, this generator operates by converting fuel and oxidizer into energy.
 attachRules = 1,1,1,1,0
 
 // --- standard part parameters ---
