--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size2Generator/Generator.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size2Generator/Generator.cfg
@@ -24,7 +24,7 @@ entryCost = 18000
 cost = 7500
 category = Electrical
 subcategory = 0
-title = Large Fuel Cell Generator 
+title = Large Multi-Fuel Generator 
 manufacturer = Coreworks Extractions Consortium
 description = A heavy-duty electric generator for when standard fuelcells just simply aren't enough to meet a vessel's power requirements. This unit fills the middle ground between fuelcells and nuclear reactors, producing more power than the former without the weight and cost of the latter. Like its smaller bretheren, this unit uses LiquidFuel/Oxidizer to produce power, but unlike them, it can also use raw Ore, though at reduced efficiency.
 
