--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size2StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size2StackDrill/Drill.cfg
@@ -70,6 +70,8 @@ MODEL
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
 		ExperienceEffect = DrillSkill
 		EfficiencyBonus = 1
 		ThermalEfficiency 
@@ -98,15 +100,17 @@ MODEL
 		TemperatureModifier
 		{
 			key = 0 20000
-			key = 250 15000
-			key = 500 7500
-			key = 750 1500
+			key = 250 17500
+			key = 500 1500
+			key = 750 2500
 			key = 1000 0
 		}		
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = DrillSkill
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		ExperienceEffect = DrillSkill
 		EfficiencyBonus = 1
 		ThermalEfficiency 
 		{
@@ -140,6 +144,6 @@ MODEL
 		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
 		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
 		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
-		MaxCoolant = 300					//Maximum amount of radiator capacity we can consume - 50 = 1 small
+		MaxCoolant = 600					//Maximum amount of radiator capacity we can consume - 50 = 1 small
 	}
 }
