--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
@@ -74,7 +74,9 @@ MODEL
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		ExperienceEffect = ConverterSkill
 		EfficiencyBonus = 1
 
 		 
@@ -135,7 +137,9 @@ MODEL
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		ExperienceEffect = ConverterSkill
 		EfficiencyBonus = 1
 
 		 
@@ -188,7 +192,9 @@ MODEL
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		ExperienceEffect = ConverterSkill
 		EfficiencyBonus = 1
 
 		 
@@ -243,7 +249,9 @@ MODEL
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		ExperienceEffect = ConverterSkill
 		EfficiencyBonus = 1
 
 		 
@@ -292,7 +300,7 @@ MODEL
 		radiatorHeatingFactor = 0.01		//How much energy we push to the active radiator
 		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
 		CoreShutdownTemp = 4000				//At what core temperature do we shut down all generators on this part?
-		MaxCoolant = 600					//Maximum amount of radiator capacity we can consume - 50 = 1 small
+		MaxCoolant = 1000					//Maximum amount of radiator capacity we can consume - 50 = 1 small
 	}
 
 }
