--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size0StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size0StackDrill/Drill.cfg
@@ -56,7 +56,9 @@ MODEL
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		Specialty = DrillSkill
 		EfficiencyBonus = 1
 		GeneratesHeat = true
 		INPUT_RESOURCE
@@ -72,11 +74,7 @@ MODEL
 			key = 750 250
 			key = 1000 0
 		}	
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		Specialty = Engineer
-		EfficiencyBonus = 1
+
 		ThermalEfficiency 
 		{
 			key = 0 0.1
@@ -111,7 +109,9 @@ MODEL
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		ExperienceEffect = DrillSkill
 		EfficiencyBonus = 1
 		ThermalEfficiency 
 		{
@@ -145,6 +145,6 @@ MODEL
 		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
 		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
 		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
-		MaxCoolant = 50					//Maximum amount of radiator capacity we can consume - 50 = 1 small
+		MaxCoolant = 100					//Maximum amount of radiator capacity we can consume - 50 = 1 small
 	}
 }
