--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackDrill/Drill.cfg
@@ -70,6 +70,8 @@ MODEL
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
 		ExperienceEffect = DrillSkill
 		EfficiencyBonus = 1
 		ThermalEfficiency 
@@ -98,16 +100,18 @@ MODEL
 		GeneratesHeat = true
 		TemperatureModifier
 		{
-			key = 0 10000
-			key = 250 7500
-			key = 500 5000
-			key = 750 1500
-			key = 1000 0
+			key = 0 20000
+			key = 250 15000
+			key = 500 10000
+			key = 750 2500
+			key = 1000 
 		}		
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = DrillSkill
+		UseSpecialistHeatBonus = true
+		SpecialistHeatFactor = 0.1
+		ExperienceEffect = DrillSkill
 		EfficiencyBonus = 1
 		ThermalEfficiency 
 		{
@@ -141,6 +145,6 @@ MODEL
 		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
 		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
 		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
-		MaxCoolant = 200					//Maximum amount of radiator capacity we can consume - 50 = 1 small
+		MaxCoolant = 400					//Maximum amount of radiator capacity we can consume - 50 = 1 small
 	}
 }
