--- a/MiningExpansion/GameData/MiningExpansion/Parts/HeavyLandingLeg/part.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/HeavyLandingLeg/part.cfg
@@ -8,7 +8,7 @@ PART
 		model = MiningExpansion/Parts/HeavyLandingLeg/Model
 		texture = tank4, Squad/Parts/FuelTank/fuelTankT100/tank4
 		texture = landingLeg, Squad/Parts/Utility/landingLegLT-2/landingLeg
-		texture = model004, Squad/Parts/Wheel/roverWheelTR-2L/model002
+		texture = model004, Squad/Parts/Wheel/roverWheelTR-2L/ksp_r_medWheel_wheel_diff
 	}
 	rescaleFactor = 1
 
@@ -16,11 +16,11 @@ PART
 	TechRequired = advLanding
 	entryCost = 4900
 	cost = 1520
-	category = Utility
+	category = Ground
 	subcategory = 0
-	title = J-7 Superheavy Duty Landing leg
-	manufacturer = Coreworks Extractions Consortium
-	description = A super heavy duty landing leg intended to take whatever is thrown at it, from hard landings to supporting multi-hundred ton bases and rigs to providing clearance for even the biggest of mining equipment. Can be surface or stack mounted.
+	title = #LOC_SMX_HeavyLeg_Name
+	manufacturer = #LOC_SMX_manufacturer_title
+	description = #LOC_SMX_HeavyLeg_desc
 	attachRules = 1,1,1,0,0
 	mass = 0.5
 	thermalMassModifier = 3.0
@@ -35,6 +35,7 @@ PART
 	breakingForce = 250
      breakingTorque = 250
 	bulkheadProfiles = srf, size1
+	tags = #autoLOC_500881 //#autoLOC_500881 = ground land leg support
 	MODULE
 	{
 		name = ModuleWheelBase		
