--- a/MiningExpansion/GameData/MiningExpansion/Parts/Mk2OreTank/part.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Mk2OreTank/part.cfg
@@ -12,9 +12,9 @@ PART
 	cost = 3750
 	category = FuelTank
 	subcategory = 0
-	title = Mk2 Holding Tank
-	manufacturer = Coreworks Extractions Consortium
-	description = A tank that can be used for storing raw materials that has been fitted into a Mk2 frame.  
+	title = #LOC_SMX_MK2OreTank_Name
+	manufacturer = #LOC_SMX_manufacturer_title
+	description = #LOC_SMX_MK2OreTank_Desc 
 	attachRules = 1,1,1,1,0
 	mass = 1.00
 	dragModelType = default
@@ -28,7 +28,7 @@ PART
 	emissiveConstant = 0.8
 	fuelCrossFeed = True
 	bulkheadProfiles = srf, mk2
-	tags = black isru mine )mining (ore resource store
+	tags = #LOC_SMX_MK2OreTank_tags
 	MODEL
 	{
 		model = MiningExpansion/Parts/Mk2OreTank/Model
