--- a/MiningExpansion/GameData/MiningExpansion/Parts/Mk2Refinery/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Mk2Refinery/ISRU.cfg
@@ -14,9 +14,9 @@ entryCost = 21000
 cost = 7500
 category = Utility
 subcategory = 0
-title = Convert-O-Tron Mk2
-manufacturer = Coreworks Extractions Consortium
-description = A smaller version of Kerbodyne's mobile processing plant, this module can take raw materials containing even trace amounts of oxygen and hydrogen, and crack them into useful fuel products.  When operated by a skilled engineer, you will be able to operate with better efficiency.  This model, while lacking the power of its bigger brother, is still capable of full ore conversion options, unlike the smaller 125 model. This module operates best at its ideal operating temperature, and features auto-shutdown in the event of excessive overheating.  Radiators can be used to help manage excessive heat.
+title = #LOC_SMX_MK2Refinery_Name
+manufacturer = #LOC_SMX_manufacturer_title
+description = #LOC_SMX_MK2Refinery_Desc
 	attachRules = 1,1,1,1,0
 	mass = 2.5
 	dragModelType = default
@@ -29,7 +29,7 @@ description = A smaller version of Kerbodyne's mobile processing plant, this mod
 	maxTemp = 2500 // = 3000
 	fuelCrossFeed = True
 	bulkheadProfiles = srf, mk2
-	tags = conver isru mine )mining (ore process resource
+	tags = #LOC_SMX_MK2Refinery_tags
 		MODEL
 	{
 		model = MiningExpansion/Parts/Mk2Refinery/Model
