--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size0OreTank/Microtank.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size0OreTank/Microtank.cfg
@@ -17,9 +17,9 @@ entryCost = 1500
 cost = 300
 category = FuelTank
 subcategory = 0
-title = Tiny Holding Tank
-manufacturer = Coreworks Extractions Consortium
-description = A tiny tank that can be used for storing raw materials.  Not to be used as a bouncy castle.
+title = #LOC_SMX_Size0reTank_Name
+manufacturer = #LOC_SMX_manufacturer_title
+description = #LOC_SMX_Size0OreTank_desc
 attachRules = 1,1,1,1,0
 
 // --- standard part parameters ---
@@ -30,7 +30,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
-tags = black isru mine )mining (ore resource store
+tags = #LOC_SMX_Size0OreTank_tags
 MODEL
 	{
 		model = MiningExpansion/Parts/Size0OreTank/Model
