--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1InlineDrill/InlineDrill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1InlineDrill/InlineDrill.cfg
@@ -24,9 +24,9 @@ entryCost = 18000
 cost = 6000
 category = Utility
 subcategory = 0
-title = 'Drillson-125' Inline Mining Excavator
-manufacturer = Coreworks Extractions Consortium
-description = Like other mining excavators, the Drillson-125 is capable of extracting resources from planetary regolith and asteroidal bodies for later storage and processing. unlike other drills, this unit was designed with atmospheric use in mind, featuring an integrated inline aeroshell housing for ease of mounting and greater aerodynamic performance. When operated by a skilled engineer, you will be able to operate with better efficiency. These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat.
+title = #LOC_SMX_Size1InlineDrill_title
+manufacturer = #LOC_SMX_manufacturer_title
+description = #LOC_SMX_Size1InlineDrill_desc
 
 attachRules = 1,1,1,1,0
 
@@ -38,7 +38,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
-tags = drill extractor harvest isru mine )mining (ore resource
+tags = #LOC_SMX_Size1InlineDrill_tags
 	MODULE
 	{
 		name = ModuleOverheatDisplay
@@ -54,7 +54,7 @@ tags = drill extractor harvest isru mine )mining (ore resource
 		StartActionName = Start Surface Harvester
 		StopActionName = Stop Surface Harvester
 		ImpactTransform = ImpactTransform
-		ImpactRange = 5
+		ImpactRange = 3.5
 		AutoShutdown = true
 		GeneratesHeat = true
 		INPUT_RESOURCE
@@ -95,7 +95,7 @@ tags = drill extractor harvest isru mine )mining (ore resource
 		StopActionName = Stop Asteroid Harvester
 		PowerConsumption = 1.5
 		Efficiency = 3
-		ImpactRange = 5
+		ImpactRange = 3.5
 		ImpactTransform = ImpactTransform
 		UseSpecialistBonus = true
 		AutoShutdown = true
