--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1InlineDrillH/InlineDrill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1InlineDrillH/InlineDrill.cfg
@@ -1,57 +1,58 @@
 PART
 {
-name = SMX_InlineDrill
+name = SMX_1mHInlineDrill
 module = Part
 author = SuicidalInsanity
-
-mesh = Model.mu
 scale = 1
 rescaleFactor = 1
-node_stack_top = 0.0, 1.180695, 0.0, 0.0, 1.0, 0.0, 1
-node_stack_bottom = 0.0, -1.180695, 0.0, 0.0, -1.0, 0.0, 1
+node_stack_top = 0.0, 0.9764016, 0.0, 0.0, 1.0, 0.0, 1
+node_stack_bottom = 0.0, -0.9764016, 0.0, 0.0, -1.0, 0.0, 1
+
+	MODEL
+	{
+		model = MiningExpansion/Parts/Size1InlineDrillH/Model
+		texture = mk2CargoBay, Squad/Parts/Utility/mk2CargoBay/mk2CargoBay
+		texture = ServiceBay, Squad/Parts/Utility/ServiceBay/ServiceBay
+		texture = TriBitDrill, Squad/Parts/Resources/RadialDrill/TriBitDrill
+		texture = DustParticle, MiningExpansion/Parts/Size1InlineDrill/DustParticle
+	}
 
 TechRequired = advScienceTech
-entryCost = 21000
-cost = 7500
+entryCost = 18000
+cost = 6000
 category = Utility
 subcategory = 0
-title = #LOC_SMX_InlinDrill_Name
+title = #LOC_SMX_Size1HInlineDrill_title
 manufacturer = #LOC_SMX_manufacturer_title
-description = #LOC_SMX_InlineDirll_desc
+description = #LOC_SMX_Size1HInlineDrill_desc
 
 attachRules = 1,1,1,1,0
 
 // --- standard part parameters ---
-mass = 1.3
+mass = 1.2
 dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
-tags = #LOC_SMX_InlineDril_Tags 
-
-	MODEL
-	{
-		model = MiningExpansion/Parts/Mk2ISRUDrill/Model
-		texture = mk2FuselageShort, Squad/Parts/FuelTank/mk2FuselageShort/mk2FuselageShort
-		texture = TriBitDrill, Squad/Parts/Resources/RadialDrill/TriBitDrill
-	}
+tags = #LOC_SMX_Size1InlineDrill_tags
 	MODULE
 	{
 		name = ModuleOverheatDisplay
 	}
+
 	MODULE
 	{
 		name = ModuleResourceHarvester
 		HarvesterType = 0
-		Efficiency = 1.0
+		Efficiency = 1
 		ResourceName = Ore
 		ConverterName = Surface Harvester
 		StartActionName = Start Surface Harvester
 		StopActionName = Stop Surface Harvester
 		ImpactTransform = ImpactTransform
-		ImpactRange = 3
+		ImpactRange = 3.5
 		AutoShutdown = true
 		GeneratesHeat = true
 		INPUT_RESOURCE
@@ -82,7 +83,6 @@ tags = #LOC_SMX_InlineDril_Tags
 			key = 750 .1
 			key = 1000 0
 		}
-
 	}
 
 	MODULE
@@ -92,8 +92,8 @@ tags = #LOC_SMX_InlineDril_Tags
 		StartActionName = Start Asteroid Harvester 
 		StopActionName = Stop Asteroid Harvester
 		PowerConsumption = 1.5
-		Efficiency = 3.5
-		ImpactRange = 3
+		Efficiency = 3
+		ImpactRange = 3.5
 		ImpactTransform = ImpactTransform
 		UseSpecialistBonus = true
 		AutoShutdown = true
@@ -101,7 +101,7 @@ tags = #LOC_SMX_InlineDril_Tags
 		TemperatureModifier
 		{
 			key = 0 10000
-			key = 250 7500
+			key = 250 5000
 			key = 500 3750
 			key = 750 500
 			key = 1000 0
@@ -111,7 +111,7 @@ tags = #LOC_SMX_InlineDril_Tags
 		SpecialistBonusBase = 0.05
 		UseSpecialistHeatBonus = true
 		SpecialistHeatFactor = 0.1
-		Specialty = DrillSkill
+		ExperienceEffect = DrillSkill
 		EfficiencyBonus = 1
 		ThermalEfficiency 
 		{
@@ -126,10 +126,11 @@ tags = #LOC_SMX_InlineDril_Tags
 	MODULE
 	{
 		name = ModuleAnimationGroup
-		deployAnimationName = Deploy_Drill
-		activeAnimationName = Drill_Running
+		deployAnimationName = UnpackH
+		activeAnimationName = RunningH
 		moduleType = Drill
 	}	
+	
 	MODULE
 	{
 		name = ModuleCoreHeat
