--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackPump/OceanicExtractor.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackPump/OceanicExtractor.cfg
@@ -14,9 +14,9 @@ entryCost = 54000
 cost = 22500
 category = Utility
 subcategory = 0
-title = Stack Oceanic Extractor
-manufacturer = Coreworks Extractions Consortium
-description = Originally a bilge pump for ocean going vessels, this unit has been adapted and modified to serve as an oceanic resource harvester by making it pump liquids in rather than out. Warning: prolonged use may cause vessel to sink.
+title = #LOC_SMX_Size1Pump_title
+manufacturer = #LOC_SMX_manufacturer_title
+description = #LOC_SMX_Size1Pump_desc
 attachRules = 1,1,1,0,0
 
 // --- standard part parameters ---
@@ -27,7 +27,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
-tags = drill extractor harvest isru mine )mining (ore resource ocean water pump
+tags = #LOC_SMX_Size1Pump_tags
 MODEL
 	{
 		model = MiningExpansion/Parts/Size1StackPump/Model
