--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size2AtmCondenser/part.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size2AtmCondenser/part.cfg
@@ -12,8 +12,8 @@ TechRequired = experimentalScience
 	category = Aero
 	subcategory = 0
 	title =  HD-RS7 Cryogenic Atmospheric Condenser
-	manufacturer = C7 Aerospace Division
-	description = Intended for use in oxygenated atmospheres, this unit is used for cryogenic distallation and condensation of oxygen from the atmosphere to extract and liquefy it to turn it into Oxidizer. Due to the nature of the distallation process, the unit is also capable of collecting Xenon, and can do so in any atmosphere.
+	manufacturer = #LOC_SMX_manufacturer_title
+	description = #LOC_SMX_Size2Condenser_desc
 	attachRules = 1,1,1,1,0
 	mass = 4
 	dragModelType = default
