--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size2StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size2StackDrill/Drill.cfg
@@ -14,9 +14,9 @@ entryCost = 98000
 cost = 38000
 category = Utility
 subcategory = 0
-title = 'Terravore' Stack Mining Excavator
-manufacturer = Coreworks Extractions Consortium
-description = A large scale ventral mount heavy mining excavator designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat. 13.33 times more efficient than the stock radial drill.
+title = #LOC_SMX_Size2Drill_Name
+manufacturer = #LOC_SMX_manufacturer_title
+description = #LOC_SMX_Size2Drill_desc
 
 attachRules = 1,1,1,1,0
 
@@ -28,7 +28,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
-tags = drill extractor harvest isru mine )mining (ore resource
+tags = #LOC_SMX_Size2Drill_tags
 MODEL
 	{
 		model = MiningExpansion/Parts/Size2StackDrill/Model
