--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
@@ -16,9 +16,9 @@ entryCost = 52000
 cost = 16000
 category = Utility
 subcategory = 0
-title = RefineOre Y-3000 Jumbo Converter Module
-manufacturer = Coreworks Extractions Consortium
-description = This mobile processing plant can take raw materials containing even trace amounts of oxygen and hydrogen, and crack them into useful fuel products.  When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating.  Radiators can be used to help manage excessive heat.
+title = #LOC_SMX_Size3ISRU_Name
+manufacturer = #LOC_SMX_manufacturer_title
+description = #LOC_SMX_Size3ISRU_desc
 attachRules = 1,1,1,0,0
 
 // --- standard part parameters ---
@@ -29,7 +29,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3500
-tags = conver isru mine )mining (ore process resource
+tags = #LOC_SMX_Size3ISRU_tags
 MODEL
 	{
 		model = MiningExpansion/Parts/Size3ISRU/Model
