--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1AtmCondenser/Part.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1AtmCondenser/Part.cfg
@@ -11,9 +11,9 @@ TechRequired = experimentalScience
 	cost = 16500
 	category = Aero
 	subcategory = 0
-	title = Cryogenic Atmospheric Condenser
-	manufacturer = C7 Aerospace Division
-	description = Intended for use in oxygenated atmospheres, this unit is used for cryogenic distallation and condensation of oxygen from the atmosphere to extract and liquefy it to turn it into Oxidizer. Due to the nature of the distallation process, the unit is also capable of collecting Xenon, and can do so in any atmosphere.
+	title = #LOC_SMX_Size1Condenser_title
+	manufacturer = #LOC_SMX_manufacturer_title
+	description = #LOC_SMX_Size1Condenser_desc
 	attachRules = 1,1,1,1,0
 	mass = 1
 	dragModelType = default
@@ -28,7 +28,7 @@ TechRequired = experimentalScience
 	maxTemp = 2000 // = 2900
 	fuelCrossFeed = True
 	bulkheadProfiles = size1, srf
-	tags = aero (air aircraft breathe fuel inlet intake jet oxygen plane suck supersonic extractor harvest isru 
+	tags = #LOC_SMX_Size1Condenser_tags
 
 	MODEL
 	{
