--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1Generator/Generator.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1Generator/Generator.cfg
@@ -24,9 +24,9 @@ entryCost = 18000
 cost = 7500
 category = Electrical
 subcategory = 0
-title = Fuel Cell Generator
-manufacturer = Coreworks Extractions Consortium
-description = Need electricity but don't have the space to radially attach Fuel Cells?   The Fuel Cell generator offers the same easy power generation that Fuel Cells offer, but in a convenient 1.25 meter housing.  Like the smaller fuel cells, this generator operates by converting fuel and oxidizer into energy.
+title = #LOC_SMX_Size1Generator_title
+manufacturer = #LOC_SMX_manufacturer_title
+description = #LOC_SMX_Size1Generator_desc
 attachRules = 1,1,1,1,0
 
 // --- standard part parameters ---
@@ -37,7 +37,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
-tags = array bank charge convert e/c elect energ pack power volt watt
+tags = #LOC_SMX_Size1Generator_tags
 
 	MODULE
 	{
