--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackDrill/Drill.cfg
@@ -14,10 +14,9 @@ entryCost = 54000
 cost = 22500
 category = Utility
 subcategory = 0
-title = 'Tremor' Stack Mining Excavator
-manufacturer = Coreworks Extractions Consortium
-description = A large scale ventral mount heavy mining excavator designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat. Yields 3 1/3 times more Ore/s than the stock Drill-O-matic.
-
+title = #LOC_SMX_Size1Drill_title
+manufacturer = #LOC_SMX_manufacturer_title
+description = #LOC_SMX_Size1Drill_desc 
 attachRules = 1,1,1,0,0
 
 // --- standard part parameters ---
@@ -28,7 +27,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
-tags = drill extractor harvest isru mine )mining (ore resource
+tags = #LOC_SMX_Size1Drill_tags
 MODEL
 	{
 		model = MiningExpansion/Parts/Size1StackDrill/Model
@@ -104,7 +103,7 @@ MODEL
 			key = 250 15000
 			key = 500 10000
 			key = 750 2500
-			key = 1000 
+			key = 1000 0
 		}		
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
