--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size2Generator/Generator.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size2Generator/Generator.cfg
@@ -24,9 +24,9 @@ entryCost = 18000
 cost = 7500
 category = Electrical
 subcategory = 0
-title = Large Multi-Fuel Generator 
-manufacturer = Coreworks Extractions Consortium
-description = A heavy-duty electric generator for when standard fuelcells just simply aren't enough to meet a vessel's power requirements. This unit fills the middle ground between fuelcells and nuclear reactors, producing more power than the former without the weight and cost of the latter. Like its smaller bretheren, this unit uses LiquidFuel/Oxidizer to produce power, but unlike them, it can also use raw Ore, though at reduced efficiency.
+title = #LOC_SMX_Size2generator_Name
+manufacturer = #LOC_SMX_manufacturer_title
+description = #LOC_SMX_Size2generator_desc
 
 attachRules = 1,1,1,1,0
 
@@ -38,7 +38,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
-tags = array bank charge convert e/c elect energ pack power volt watt
+tags = #LOC_SMX_Size2generator_tags
 
 	MODULE
 	{
@@ -48,7 +48,24 @@ tags = array bank charge convert e/c elect energ pack power volt watt
 		 StopActionName = Stop Fuel Cell
 		 FillAmount = 0.95
 		AutoShutdown = false
-		GeneratesHeat = false
+		GeneratesHeat = true
+		TemperatureModifier
+		{
+			key = 0 100000
+			key = 250 100000
+			key = 500 500
+			key = 750 250	
+			key = 1000 100	
+		}
+		DefaultShutoffTemp = .8
+		ThermalEfficiency 
+		{
+			key = 0 0 0 0
+			key = 250 0.1 0 0
+			key = 500 1.0 0 0
+			key = 600 0.1 0 0
+			key = 750 0 0 0 
+		}
 		UseSpecialistBonus = false
 
 		 
@@ -79,7 +96,24 @@ tags = array bank charge convert e/c elect energ pack power volt watt
 		 StopActionName = Stop Generator (Ore)
 		 FillAmount = 0.95
 		AutoShutdown = false
-		GeneratesHeat = false
+		GeneratesHeat = true
+		TemperatureModifier
+		{
+			key = 0 100000
+			key = 250 100000
+			key = 500 500
+			key = 750 250	
+			key = 1000 100	
+		}
+		DefaultShutoffTemp = .8
+		ThermalEfficiency 
+		{
+			key = 0 0 0 0
+			key = 250 0.1 0 0
+			key = 500 1.0 0 0
+			key = 600 0.1 0 0
+			key = 750 0 0 0 
+		}
 		UseSpecialistBonus = false
 
 		 
@@ -96,6 +130,23 @@ tags = array bank charge convert e/c elect energ pack power volt watt
 			DumpExcess = false
 		}
 	}
+	MODULE
+	{
+		name = ModuleCoreHeat
+		CoreTempGoal = 500
+		CoreToPartRatio = 0.1	
+		CoreTempGoalAdjustment = 0	
+		CoreEnergyMultiplier = 0.1	
+		HeatRadiantMultiplier = 0.05	
+		CoolingRadiantMultiplier = 0	
+		HeatTransferMultiplier = 0	
+		CoolantTransferMultiplier = 0.01
+		radiatorCoolingFactor = 1		
+		radiatorHeatingFactor = 0.01	
+		MaxCalculationWarp = 1000			
+		CoreShutdownTemp = 1000				
+		MaxCoolant = 10	
+	}
 	RESOURCE
 	{
 		name = ElectricCharge
@@ -104,3 +155,4 @@ tags = array bank charge convert e/c elect energ pack power volt watt
 	}
 
 }
+
